--- a/app/templates/nav_bar.html
+++ b/app/templates/nav_bar.html
@@ -9,7 +9,7 @@
                         <span class="icon-bar"></span>                         
                     </button>
                     <a class="navbar-brand hidden-lg hidden-md" href="index"><span class="glyphicon glyphicon-home"></span></a>
-                    <a class="navbar-brand hidden-sm hidden-xs" href="index"><span id="logo">{{company_name['name']}}</span></a>
+                    <a class="navbar-brand hidden-sm hidden-xs" href="index"><span id="logo" style="font-family: Aisha-script;color:#4f351c;">{{company_name['name']}}</span></a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
