--- a/app/templates/home/my_account.html
+++ b/app/templates/home/my_account.html
@@ -1,162 +1,71 @@
-<?php
-
-//session start
-session_start();
-//DB connection
-include 'includes/connection.php';
-
-//check for open session else redirect
-if(!isset($_SESSION['account_type'])){
-    header("Location: Index.php");
-}
-
-$userid = $_SESSION['userid'];
-$operator = null;
-$currentActiveRes = null;
-
-if (isset($_SESSION['username']) && isset($_SESSION['lname'])) {
-$operator = $_SESSION['username'] . " " .$_SESSION['lname'];
-}
-//Query for selectting the current user of the application
-$sql = "SELECT first_name, last_name, email, telephone, password, is_admin, is_smoker FROM users WHERE userid = '$userid' ";
-$result = mysqli_query($conn, $sql);
-
-?>
+{% extends 'base_template.html' %}
+{% block content %}
 
 <!-- This page acts as the personal profil of any every individual, registered to this app -->
 <!-- Here users can track their active reservations, edit their personal data at will(Note: for better acknowledgement of users, a log file should be made tracking those changes)-->
-<!DOCTYPE HTML>
-<html lang="en">
-    <head>
-        <title>
-            My Account | Papa Felipe's®
-        </title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Bootstrap link to CSS & JavaScript -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <!-- Custom CSS & JavaScript -->
-        <link rel="stylesheet" href="css/custom.css" type="text/css">
-        <script src="js & jquery/myScripts.js"></script>
-        <script src="js & jquery/jquery.js"></script>
-        <script>
-            /*This function identifies the user of the page.
-            *If he is an unregistered visitor the options button will appear along with the options to login & register
-            but in the case of a user account the options will be replaced with the greetings message*/
-            $( document ).ready(function() {
-                var userview = <?php echo json_encode($_SESSION['username']) ?>;
-                
-                if(userview != null){
-                $("a[href='Register.php']").attr('href', 'MyAccount.php');    
-                $("a[href='Login.php']").attr('href', 'Logout.php');
-                }
-            });
-        </script> 
-        <script>
-            //script for making a pagination system on the reservation history table
-            //Video Source/Reference:https://www.youtube.com/watch?v=hxayKRnC9NA
-            $(document).ready(function() {
-            
-            //declaring variables
-            var page = 1;
-            var per_page = 5;
-            var items = $('.numOfRows').length;
-            var last_page = Math.ceil(items/per_page);
-                
-            //Set Page
-            function setPage(page){
-                $('.numOfRows').slice(0, page * per_page).hide();
-                $('.numOfRows').slice(page * per_page - per_page,page * per_page).show();
-                $('.numOfRows').slice(page * per_page).hide();
-                $('#page_display').html('Page ' + page);
-            }
-            
-            //Next Button
-            $('.next').click(function(){
-                if(page < last_page){
-                    page++;
-                    setPage(page);
-                }
-            });
-            
-            
-            //Previous Button
-            $('.prev').click(function(){
-                if(page > 1){
-                    page--;
-                    setPage(page);
-                }
-            });
-            
-            
-            //Generate Page Links
-            for(x = 1; x <= last_page; x++){
-                $('.pages').append('<a class="links link_"' + x + '">' + x + '</a>' + ' '); 
-            }
-            
-                
-            //Links functions
-            $('.links').click(function(){
-                $('.links.link_' + page).attr('href', '#');
-                page = $(this).html();
-                $('.links.link_' + page).removeAttr('href');
-                setPage(page);
-            });
-                
-            setPage(1);        
-            });
-        </script>
-        <!-- Background styling-->
-        <style>
-            .error {color: #FF0000;}
-            
-            body {
-            background-image:    url(fonts/Background3t.jpg);
-            background-attachment: fixed;
-            }
-        </style>
-    </head>    
+<script>
+    //script for making a pagination system on the reservation history table
+    //Video Source/Reference:https://www.youtube.com/watch?v=hxayKRnC9NA
+    $(document).ready(function() {
     
-    <body class="img-responsive">
-    <!--Navigation bar 1.6 -->
-    <!-- Reference: W3Schools http://www.w3schools.com/bootstrap/bootstrap_navbar.asp-->
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>                         
-                    </button>
-                    <a class="navbar-brand hidden-lg hidden-md" href="Index.php"><span class="glyphicon glyphicon-home"></span></a>
-                    <a class="navbar-brand hidden-sm hidden-xs" href="Index.php"><span id="logo">Papa Felipe's</span></a>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="Menu.php">Menu</a></li>
-                        <li><a href="ReservationsTab.php">Reservations</a></li>
-                        <li><a href="Contact.php">Contact</a></li>
-                        <li><a href="AboutUs.php">About Us</a></li>
-                    </ul>   
-                    <ul class="nav navbar-nav navbar-right navbar-collapse" style="font-size:calc(80% + 1vw); position: relative; top:2%;">
-                        <div class="dropdown">
-                            <span class="glyphicon glyphicon-cog dropdown-toggle" data-toggle="dropdown"><?php echo $_SESSION['username'];?></span>
-                            <span class="caret"></span>
-                        <ul class="dropdown-menu">
-                            <li><a href="MyAccount.php"><span class="glyphicon glyphicon-user"></span> My Account</a></li>
-                            <li><a href="Admin_Interface.php"><span class="glyphicon glyphicon-king"></span> Admin Interface</a></li>
-                            <li><a href="Logout.php"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-                        </ul>
-                        </div>
-                    </ul>
-                </div>
-            </div>
-        </nav>            
+    //declaring variables
+    var page = 1;
+    var per_page = 5;
+    var items = $('.numOfRows').length;
+    var last_page = Math.ceil(items/per_page);
         
-    <!-- End of navigation bar -->
+    //Set Page
+    function setPage(page){
+        $('.numOfRows').slice(0, page * per_page).hide();
+        $('.numOfRows').slice(page * per_page - per_page,page * per_page).show();
+        $('.numOfRows').slice(page * per_page).hide();
+        $('#page_display').html('Page ' + page);
+    }
     
+    //Next Button
+    $('.next').click(function(){
+        if(page < last_page){
+            page++;
+            setPage(page);
+        }
+    });
+    
+    
+    //Previous Button
+    $('.prev').click(function(){
+        if(page > 1){
+            page--;
+            setPage(page);
+        }
+    });
+    
+    
+    //Generate Page Links
+    for(x = 1; x <= last_page; x++){
+        $('.pages').append('<a class="links link_"' + x + '">' + x + '</a>' + ' '); 
+    }
+    
+        
+    //Links functions
+    $('.links').click(function(){
+        $('.links.link_' + page).attr('href', '#');
+        page = $(this).html();
+        $('.links.link_' + page).removeAttr('href');
+        setPage(page);
+    });
+        
+    setPage(1);        
+    });
+</script>
+<!-- Background styling-->
+<style>
+    .error {color: #FF0000;}
+    
+    body {
+    background-image:    url(fonts/Background3t.jpg);
+    background-attachment: fixed;
+    }
+</style>  
     <!-- Content -->
         <!-- Personal Info -->
         <div class="container-default" style="margin-bottom: 75px;">
@@ -285,13 +194,4 @@ $result = mysqli_query($conn, $sql);
             </div>
             <div class="col-md-0" style="margin-top: 15px;"></div>   
         <!-- End of content-->
-    
-        <!-- footer version 1 (a more dynamic footer that requires enough data to display correctly else it will hang is the middle of the page)-->
-        <div class="container-default">
-            <div class="col-md-0"></div>
-            <div class="col-md-12 text-center footer"><p>Papa Felipe's® est. 1994 - <?php echo Date('Y');?>. All Rights Reserved.<p></div>
-            <div class="col-md-0"></div>
-        </div>
-
-    </body>
-</html>
+{% endblock %}
