--- a/app/templates/nav_bar.html
+++ b/app/templates/nav_bar.html
@@ -24,8 +24,13 @@
                             <span class="caret"></span>
                         <ul class="dropdown-menu">
                             {% if current_user.is_authenticated %}
-                            <li><a href="{{ url_for('home.my_account') }}"><span class="glyphicon glyphicon-user"></span> MyAccount</a></li>
-                            <li><a href="#"><span class="glyphicon glyphicon-king"></span> Admin Interface</a></li>
+                                {% if current_user.is_admin %}
+                                    <li><a href="{{ url_for('admin.appointments') }}"><span class="glyphicon glyphicon-king"></span> To Appointments Page</a></li>
+                                    <li><a href="{{ url_for('admin.services') }}"><span class="glyphicon glyphicon-king"></span> To Services Page</a></li>
+                                    <li><a href="{{ url_for('admin.users') }}"><span class="glyphicon glyphicon-king"></span> To User Page</a></li>
+                                {% else %}
+                                    <li><a href="{{ url_for('home.my_account') }}"><span class="glyphicon glyphicon-user"></span> MyAccount</a></li>
+                                {% endif %}
                             <li><a href="{{ url_for('auth.logout') }}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
                             {% else %}
                             <li><a href="{{ url_for('auth.register') }}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
