--- a/app/templates/admin/admin_interface.html
+++ b/app/templates/admin/admin_interface.html
@@ -167,7 +167,7 @@
 <!-- Content --> 
 <!-- Start of admin's navigation menu div-->
 <ul class="nav nav-pills wrapper4">
-    <li class="active"><a data-toggle="pill" href="#home">Today's Appointments</a></li>
+    <li class="active"><a data-toggle="pill" href="#home">Upcoming Appointments</a></li>
     <li><a data-toggle="pill" href="#menu1">Appointment History</a></li>
     <li><a data-toggle="pill" href="#menu2">Users</a></li>
     <li><a data-toggle="pill" href="#menu3">Services</a></li>
@@ -181,7 +181,7 @@
         <div class="col-md-0" style="margin-top: 15px;"></div>
         <div class="col-md-12" style="margin-top: 15px;">
             <div class="wrapper4">
-                <h2 class="text-center">Today's Appointments</h2>
+                <h2 class="text-center">Upcoming Appointments</h2>
                 <hr>
                 <table class="table table-hover" id="myTable1">
                     <thead>
@@ -191,9 +191,6 @@
                         <th>Customer</th>
                         <th>Barber</th>
                         <th>Service</th>
-                        <th>Attendance</th>
-                        <th>Appointment by</th>
-                        <th>Appointment Made on</th>
                     </thead>
                     <tbody id="myTableBody1">
                         <tr class="numOfRows">
@@ -201,11 +198,42 @@
                         </tr>
                     </tbody>
                 </table>
-                
                 <div class="col-md-12 text-center">
                     <ul class="pagination pagination-lg pager" id="myPager1"></ul>
                 </div>
-                
+            </div>
+        </div>
+        <div class="col-md-0" style="margin-top: 15px;"></div>       
+    </div>
+    <!-- End of reservation for today-->
+    
+    <!-- Reservation History --> 
+    <div id="menu1" class="tab-pane fade">
+        <div class="col-md-0" style="margin-top: 15px;"></div>
+        <div class="col-md-12" style="margin-top: 15px;">
+            <div class="wrapper4">
+                <h2 class="text-center">Appointment History</h2>
+                <hr>
+                <table class="table table-hover" id="myTable2">
+                    <thead>
+                        <th>Appointment Date</th>
+                        <th>Arrival</th>
+                        <th>Departure</th>
+                        <th>Customer</th>
+                        <th>Barber</th>
+                        <th>Service</th>
+                        <th>Appointment by</th>
+                        <th>Appointment Made on</th>
+                        <th>Attendance</th>
+                    </thead>
+                    <tbody id="myTableBody2">
+                        <tr></tr>
+                    </tbody>
+                </table>
+                <div class="col-md-12 text-center">
+                   <ul class="pagination pagination-lg pager" id="myPager2"></ul>
+                </div>
+
                 <button id="btn_edit_attendance" class="btn btn-primary"><span class="glyphicon glyphicon-cog"></span> Edit Attendance</button>
                 <button id="btn_add_appointment" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Add Appointment</button>
                 <button id="btn_cancel_appointment" class="btn btn-danger"><span class="glyphicon glyphicon-minus-sign"></span> Cancel Appointment</button>
@@ -233,38 +261,6 @@
                             <button type="submit" class="btn btn-default">Submit</button>    
                         </form>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-0" style="margin-top: 15px;"></div>       
-    </div>
-    <!-- End of reservation for today-->
-    
-    <!-- Reservation History --> 
-    <div id="menu1" class="tab-pane fade">
-        <div class="col-md-0" style="margin-top: 15px;"></div>
-        <div class="col-md-12" style="margin-top: 15px;">
-            <div class="wrapper4">
-                <h2 class="text-center">Reservation History</h2>
-                <hr>
-                <table class="table table-hover" id="myTable2">
-                    <thead>
-                        <th>Appointment Date</th>
-                        <th>Arrival</th>
-                        <th>Departure</th>
-                        <th>Customer</th>
-                        <th>Barber</th>
-                        <th>Service</th>
-                        <th>Attendance</th>
-                        <th>Appointment by</th>
-                        <th>Appointment Made on</th>
-                    </thead>
-                    <tbody id="myTableBody2">
-                        <tr></tr>
-                    </tbody>
-                </table>
-                <div class="col-md-12 text-center">
-                   <ul class="pagination pagination-lg pager" id="myPager2"></ul>
                 </div>
             </div>                  
         </div>
@@ -334,6 +330,11 @@
                     <tr class="numOfRows">
                         <td> {{service.name}} </td>
                         <td> {{service.cost}} </td>
+                        <td>
+                            <a href="{{ url_for('admin.delete_service', id=service.id) }}">
+                                <span class='glyphicon glyphicon-trash'></span> Delete
+                            </a>
+                        </td>
                     </tr>
                     {% endfor %}
                     {% endif %}
@@ -344,7 +345,6 @@
             </div>
             
             <button id="btn_add_service" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Add Services</button>
-            <button id="btn_remove_service" class="btn btn-danger"><span class="glyphicon glyphicon-minus-sign"></span> Remove Services</button>
 
     <!-- End of display section of Service Tab -->
     <!-- Start of modal/form section of Service Tab -->
@@ -356,7 +356,7 @@
                 <div class="modal-content">
                     <span class="close">&times;</span>
                     <!--Add service form-->
-                    <form class="form-horizontal" action="{{ url_for('admin.admin_interface') }}" method="POST" id="add_service_form" style="display: none">
+                    <form class="form-horizontal" action="{{ url_for('admin.add_service') }}" method="POST" id="add_service_form" style="display: none">
                         <h3><b><center>Add Service<center></b></h3>
                             {{ add_service_form.hidden_tag() }}
                             <div class="form-group">
@@ -369,17 +369,6 @@
                             </div>
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
-
-                    <!--Remove service form-->
-                    <form class="form-horizontal" action="{{ url_for('admin.admin_interface') }}" method="POST" id="remove_service_form" style="display: none">
-                        <h3><b><center>Remove Service</center></b></h3>
-                            {{ remove_service_form.hidden_tag() }}
-                            <div class="form-group">
-                                <label><b>{{remove_service_form.name.label}}</b></label>
-                                {{remove_service_form.name(class="form-control")}}
-                            </div>                                  
-                        <button type="submit" class="btn btn-default">Submit</button>    
-                    </form>
                 </div>
             </div>    
         </div>
@@ -389,6 +378,27 @@
     <!-- End of Tables tab--> 
 </div>
 <!-- End of tab-content div-->
+
+<!-- This is the Jinja template using WTForms to determine if the action was successful or not and adapt the layout of the response respectively-->
+{% with successes = get_flashed_messages(category_filter=["info"]) %}
+    {% if successes %}
+        {% for message in successes %}
+            <div class="alert alert-success flash">
+                {{message}}
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
+
+{% with errors = get_flashed_messages(category_filter=["error"]) %}
+    {% if errors %}
+        {% for message in errors %}
+            <div class="alert alert-danger flash">
+                {{message}}
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
 
 <script>
 //This modals are used to collect the necesary information from the user in order to make some changes to data like reervations or tables
@@ -402,7 +412,6 @@ var btn_edit_attendance = document.getElementById("btn_edit_attendance");
 var btn_add_appointment = document.getElementById("btn_add_appointment");
 var btn_cancel_appointment = document.getElementById("btn_cancel_appointment");
 var btn_add_service = document.getElementById("btn_add_service");
-var btn_remove_service = document.getElementById("btn_remove_service");
 
 // Get the <span> element that closes the modals
 var span = document.getElementsByClassName("close")[0];
@@ -410,7 +419,6 @@ var span2 = document.getElementsByClassName("close")[1];
 
 //Get the form ids
 var add_service_form = document.getElementById("add_service_form");
-var remove_service_form = document.getElementById("remove_service_form");
 
 // When the user clicks on the button, open the modals
 btn_edit_attendance.onclick = function() {
@@ -425,12 +433,6 @@ btn_cancel_appointment.onclick = function() {
 btn_add_service.onclick = function() {
     services_modal.style.display = "block";
     add_service_form.style.display = "block";
-    remove_service_form.style.display = "none";
-}
-btn_remove_service.onclick = function() {
-    services_modal.style.display = "block";
-    remove_service_form.style.display = "block";
-    add_service_form.style.display = "none";
 }
 
 // When the user clicks on <span> (x), close the modals
