--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -11,15 +11,28 @@
         <link rel="stylesheet" href="/static/css/custom.css" type="text/css">
         <script src="/static/js & jquery/myScripts.js"></script>
         <script src="/static/js & jquery/jquery.js"></script>
-        <!--JQuery UI Datepicker Reference:https://jqueryui.com/datepicker/ -->
+        <!--JQuery UI Datepicker/Timepicker Reference:https://jqueryui.com/datepicker/ -->
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script>
             $( function() {
-                $( "#datepicker" ).datepicker();
+                $( '#datepicker' ).datepicker();
+                $( '[id*=timepicker]' ).timepicker({
+                    timeFormat: 'H:mm',
+                    interval: 30,
+                    minTime: '8',
+                    startTime: '8:00',
+                    maxTime: '7:30pm',
+                    dropdown: true,
+                    scrollbar: true,
+                    'disableTimeRanges': [
+                        ['8:00am']
+                    ]
+                });
             });
-        </script>
+        </script>       
         <!-- Background styling-->
         <style>
             .error {color: #FF0000;}
