--- a/app/templates/nav_bar.html
+++ b/app/templates/nav_bar.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li><a href="#">Appointments</a></li>
+                        <li><a href="{{ url_for('home.appointments') }}">Appointments</a></li>
                         <li><a href="{{ url_for('home.contact') }}">Contact</a></li>
                         <li><a href="{{ url_for('home.about_us') }}">About Us</a></li>
                     </ul>   
