Commit 7/12 a) Added user registration/deletion for admins with more flexibility b)Added appointment scheduling with criteria for users c)Added attendance editing so admins can keep track of customers with bad appearance history d)Broke pagination todo:fix it e)minor optimization here and there

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -22,14 +22,11 @@
                 $( '[id*=timepicker]' ).timepicker({
                     timeFormat: 'H:mm',
                     interval: 30,
-                    minTime: '8',
-                    startTime: '8:00',
-                    maxTime: '7:30pm',
+                    minTime: '08',
+                    startTime: '08:00',
+                    maxTime: '19:30',
                     dropdown: true,
                     scrollbar: true,
-                    'disableTimeRanges': [
-                        ['8:00am']
-                    ]
                 });
             });
         </script>       
