--- a/app/templates/home/appointments.html
+++ b/app/templates/home/appointments.html
@@ -6,10 +6,10 @@
 <div class="container">
     <div class="col-md-2"></div>
     <div class="col-md-8">
-        <div class="alert alert-danger text-centered">
+        <div class="alert alert-danger text-centered" style="display: none">
             Please remember that you need to be logged in to make a reservation.
         </div>
-        <div class="alert alert-warning text-centered">
+        <div class="alert alert-warning text-centered" style="display: none">
             You have an active reservation. If you want to make a new one, please, <a href="{{url_for("home.my_account")}}">cancel</a> the current one or contact us at 123.456.7890!
         </div>
     </div>
@@ -19,41 +19,51 @@
 <div class="col-md-2"></div>
 <div class="col-md-8">
     <div class="wrapper3">
-        <form action="" method="post">
-                <div class="form-group">
-                    <label for="visitdate"><span class="glyphicon glyphicon-calendar"></span><b>Appointment Date:</b></label>
-                    <input type="text" id="datepicker" name="visitdate" class="form-control" placeholder="Click to pick the appointment date" required>
-                </div>
+        <form action="{{ url_for('home.appointments') }}" method="post">
+            {{ appointment_form.hidden_tag() }}
+
             <div class="form-group">
-                <label for="visittime"><span class="glyphicon glyphicon-time"></span><b>Appointment Time:</b></label>
-                <input type="text" id="timepicker" class="form-control" placeholder="Click to pick the appointment time" required>
+                <label><span class="glyphicon glyphicon-calendar"></span><b>{{ appointment_form.appointment_date.label }}</b></label>
+                {{appointment_form.appointment_date(class="form-control",type="text", id="datepicker", placeholder="Click to pick the appointment date")}}
             </div>
             <div class="form-group">
-                <label for="persons"><span class="glyphicon glyphicon-scissors"></span><b>Service:</b></label><br>
-                <select name="personsoptions"required>
-                    <option value="1"> 1 Person</option>
-                    <option value="2"> 2 Persons</option>
-                    <option value="3"> 3 Persons</option>
-                    <option value="4"> 4 Persons</option>
-                    <option value="5"> 5 Persons</option>
-                    <option value="6"> 6 Persons</option>
-                    <option value="7"> 7 Persons</option>
-                    <option value="8"> 8 Persons</option>
-                    <option value=" " disabled> For a reservation of 9 or more persons please contact us at 123.456.7890 </option>
-                </select>
+                <label><span class="glyphicon glyphicon-time"></span><b>{{ appointment_form.appointment_time.label }}</b></label>
+                {{appointment_form.appointment_time(class="form-control",type="text", id="timepicker", placeholder="Click to pick the appointment time")}}
             </div>
-            
             <div class="form-group">
-                <label><span class="glyphicon glyphicon-user"></span><b> Barber:</b></label>
-                <input type="radio" name="reserved_via" value="Website" required>Website
-                <input type="radio" name="reserved_via" value="Telephone">Telephone
+                <label><span class="glyphicon glyphicon-user"></span><b>{{ appointment_form.barber.label }}</b></label><br>
+                {{appointment_form.barber(class="form-control")}}
             </div>
-            <button type="submit" class="btn btn-default" disabled>Submit</button>
+            <div class="form-group">
+                <label><span class="glyphicon glyphicon-scissors"></span><b>{{ appointment_form.service.label }}</b></label>
+                {{appointment_form.service(class="form-control")}}
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
         </form>
     </div>        
 </div>
 <div class="col-md-2"></div>   
 
+<!-- This is the Jinja template using WTForms to determine if the action was successful or not and adapt the layout of the response respectively-->
+{% with successes = get_flashed_messages(category_filter=["info"]) %}
+    {% if successes %}
+        {% for message in successes %}
+            <div class="alert alert-success flash">
+                {{message}}
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
+
+{% with errors = get_flashed_messages(category_filter=["error"]) %}
+    {% if errors %}
+        {% for message in errors %}
+            <div class="alert alert-danger flash">
+                {{message}}
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
         
 <!-- End of content-->
 <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
